Criaçao da documentacao

--- a/src/gatsby-theme-document/logo.mdx
+++ b/src/gatsby-theme-document/logo.mdx
@@ -1,3 +1,1 @@
-Document
-
-<!-- ![Logo](https://via.placeholder.com/215x40?text=Document) -->
+![Logo](https://theme.zdassets.com/theme_assets/149310/4872f938b1ce0f1d13f8b752abae86ff2b6a5c1e.png)
