Ajuste pos dos links

--- a/content/configDocker/02-installDockerCompose.mdx
+++ b/content/configDocker/02-installDockerCompose.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Instalando o Docker e Docker Compose'
+title: 'Instalando o Docker Compose'
 description: 'Instalando e Criando docker compose'
 ---
 
