--- a/content/configDocker/01-commadsUtilsDocker.mdx
+++ b/content/configDocker/01-commadsUtilsDocker.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Comandos Uteis Docker'
-description: 'Alguns Comandos Uteis do Docker'
+title: 'Comandos Úteis Docker'
+description: 'Alguns Comandos Úteis do Docker'
 ---
 
 ## Tabela De Comandos
