--- a/content/configDocker/02-installDockerCompose.mdx
+++ b/content/configDocker/02-installDockerCompose.mdx
@@ -3,8 +3,8 @@ title: 'Instalando o Docker Compose'
 description: 'Instalando e Criando docker compose'
 ---
 
-Esta sessão irá mostrar os passos da instalação o docker compose em ambientes
-linux. A documentação oficial do docker compose está neste link [Docker Composer](https://docs.docker.com/compose/install/).
+Esta seção irá abordar os passos da instalação do Docker Compose em ambientes
+linux. A documentação oficial pode ser encontrada neste link [Docker Composer](https://docs.docker.com/compose/install/).
 
 ### Instalando Compose em Sistemas linux
 
@@ -14,7 +14,7 @@ linux. A documentação oficial do docker compose está neste link [Docker Compo
     sudo curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
     ```
 
-2.  Aplique as permissões necessárias no binario
+2.  Aplique as permissões necessárias no binário
 
     ```bash
     sudo chmod +x /usr/local/bin/docker-compose
