--- a/content/configDocker.mdx
+++ b/content/configDocker.mdx
@@ -3,8 +3,8 @@ title: 'Intalando e Configurando Docker'
 description: 'Como configurar o docker para o ambiente de trabalho'
 ---
 
-Este guia irá ensiar como instalar o docker, docker composer e dar as permissões
-necessárias para que o docker funcione corretamente em ambientes linux.
+Este guia irá ensinar como instalar o Docker, Docker Compose e dar as permissões 
+necessárias para que o Docker funcione corretamente em ambientes linux.
 Este guia não irá contemplar sistema operacional Windows ou Mac, devido sua alta 
 complexidade de criação de uma imagem docker.
 
@@ -16,7 +16,7 @@ A documentação oficial da instalação do docker, pode ser conferida neste lin
 
 ### Instalação Linux
 
-1.  Atualizar os pacotes `apt`:
+1.  Atualize os pacotes `apt`:
 
     ```console
     $ sudo apt-get update
@@ -50,7 +50,7 @@ A documentação oficial da instalação do docker, pode ser conferida neste lin
     sub   rsa4096 2017-02-22 [S]
     ```
 
-4.  Use o comando abaixo para instalar a versão mais estável do Docker
+4.  Use o comando abaixo para instalar a versão mais estável do Docker:
 
     ```console
     $ sudo add-apt-repository \
@@ -60,7 +60,7 @@ A documentação oficial da instalação do docker, pode ser conferida neste lin
     ```
 
     AVISO: O docker ele não deve ser executado com comandos de superusuário,
-    para mais informações ler o link [Docker User](https://docs.docker.com/install/linux/linux-postinstall/).
+    para mais informações consulte o link [Docker User](https://docs.docker.com/install/linux/linux-postinstall/).
 
 ### Dando Permissões para o usuário do docker
 
